# StreaMonitor

./: .gitignore  CMakeLists.txt  Dockerfile  Downloader.py  Merger.json  README.md  RELEASE.md  build.py  config.json  generate_icon.py  parameters.py  release.py  requirements.txt  start.bat  vcpkg.json  watchdog.py
.github/workflows/: build.yml
AstroTools/: Install MergeAllFilesStripHelper.py  Install MergeAllFilesStripHelperWithSymlinks.py  Install StripHelperV2.py  Install SubDeleter.py  MergerConfig.json  NewSorter.py  Restart Virtual Desktop.py  StripHelperv2.py  SubDeleter.py  jsondump.py  path_structure.json  run_striphelper_Symlinks.py
StripHelper/: Merger Default Config.json  main.py  readme.md
StripHelper/install in right click/: readme.md  run_striphelper.py  run_striphelper_Symlinks.py
StripHelper/striphelper/: cli.py  config.py  ffmpeg.py  gui.py  pipeline.py  utils.py  validators.py
installers/: readme.md
src/: main.cpp  main_cli.cpp  main_gui.cpp
src/config/: config.cpp  config.h
src/core/: bot_manager.cpp  bot_manager.h  crash_handler.cpp  crash_handler.h  model_group.cpp  model_group.h  site_plugin.cpp  site_plugin.h  types.cpp  types.h
src/downloaders/: hls_recorder.cpp  hls_recorder.h
src/gui/: audio_player.cpp  audio_player.h  gui_app.cpp  gui_app.h  image_cache.cpp  image_cache.h  imgui_log_sink.h  system_tray.cpp  system_tray.h
src/net/: http_client.cpp  http_client.h  m3u8_parser.cpp  m3u8_parser.h  mouflon.cpp  mouflon.h  proxy_pool.cpp  proxy_pool.h
src/resources/: app.rc  icon_data.h  resource.h
src/sites/: amateurtv.cpp  amateurtv.h  bongacams.cpp  bongacams.h  cam4.cpp  cam4.h  camscom.cpp  camscom.h  camsoda.cpp  camsoda.h  chaturbate.cpp  chaturbate.h  cherrytv.cpp  cherrytv.h  dreamcam.cpp  dreamcam.h  dreamcamvr.cpp  dreamcamvr.h  fanslylive.cpp  fanslylive.h  flirt4free.cpp  flirt4free.h  manyvids.cpp  manyvids.h  myfreecams.cpp  myfreecams.h  sexchathu.cpp  sexchathu.h  streamate.cpp  streamate.h  stripchat.cpp  stripchat.h  stripchatvr.cpp  stripchatvr.h  xlovecam.cpp  xlovecam.h
src/utils/: mkv_edit.cpp  mkv_edit.h  thumbnail_generator.cpp  thumbnail_generator.h
src/web/: h2_server.cpp  h2_server.h  ssl_cert_gen.h  web_server.cpp  web_server.h  ws_preview_server.cpp  ws_preview_server.h
streamonitor/: bot.py  clean_exit.py  config.py  log.py  manager.py  model_info_base.py
streamonitor/downloaders/: ffmpeg.py  ffsettings.py  fmp4s_wss.py  hls.py
streamonitor/enums/: __init__.py  status.py
streamonitor/managers/: climanager.py  zmqmanager.py
streamonitor/managers/httpmanager/: httpmanager.py
streamonitor/managers/httpmanager/mappers/: status_mappers.py
streamonitor/managers/httpmanager/static/: index.html  streamonitor.css  streamonitor.js
streamonitor/managers/httpmanager/utils/: filter_streamers.py
streamonitor/sites/: __init__.py  amateurtv.py  bongacams.py  cam4.py  camscom.py  camsoda.py  chaturbate.py  cherrytv.py  dreamcam.py  dreamcam_vr.py  fansly_live.py  flirt4free.py  manyvids.py  myfreecams.py  sexchathu.py  streamate.py  stripchat.py  stripchat_vr.py  xlovecam.py
streamonitor/utils/: CloudflareDetection.py  __init__.py  cf_broker.py  cf_session.py
tools/: fix_av_sync.py
tools/Sorter/: CMakeLists.txt  generate_icon.py
tools/Sorter/res/: sorter.rc
tools/Sorter/src/: app.cpp  app.h  main.cpp  sorter.cpp  sorter.h
tools/StripHelper/: CMakeLists.txt  generate_icon.py
tools/StripHelper/res/: resource.h  striphelper.rc
tools/StripHelper/src/: app.cpp  app.h  config.h  main.cpp  native_ffmpeg.cpp  native_ffmpeg.h  pipeline.cpp  pipeline.h  shell_integration.cpp  shell_integration.h  subprocess.cpp  subprocess.h
tools/ThumbnailTool/: ARCHITECTURE.md  CMakeLists.txt
tools/ThumbnailTool/res/: resource.h  thumbnailtool.rc
tools/ThumbnailTool/src/: app.cpp  app.h  main.cpp
web/: 404.html  index.html  index.txt
web-dashboard/: next.config.js  package-lock.json  package.json
web-dashboard/src/app/: globals.css  layout.tsx  page.tsx
web-dashboard/src/app/login/: page.tsx
web-dashboard/src/lib/: api.ts
web/404/: index.html
web/_next/static/DcsRS0SDwqCQTmcWiD_aP/: _buildManifest.js
web/_next/static/chunks/: main-app-ca86d5f414c72ecf.js
web/_next/static/chunks/app/: layout-fdab2ee82d96d94d.js  page-0acfdfd251719fb1.js  page-46a47c7ac206cc80.js  page-54d8d10597885786.js  page-6db6a2d37b0fb8c1.js  page-a0aa763cdd1320dc.js  page-a5d1227534482277.js  page-b52acc6e5145a790.js  page-bdbb7cffd66c7227.js  page-dbdfdc520c90f75c.js  page-dee0d81310da816e.js  page-ec6dc5317a78c6b7.js
web/_next/static/chunks/app/_not-found/: page-9e6fcd4444b70cfa.js
web/_next/static/chunks/app/login/: page-0e1b50e2d0a53733.js  page-19afabcfbfb83c6f.js  page-216af07761b7b786.js  page-27aa1b304f95f2e2.js  page-d9af00b3b31720e2.js
web/_next/static/css/: 0b62b711ffd93cb1.css  1b3edb12b1ffc665.css  5bc4443336e32632.css  a35f14ee807f0add.css  b9729e592b733631.css  db710683d7798a1a.css
web/login/: index.html  index.txt
